<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.FoodMeasureActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/food_measure"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/food_spinner"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edittext_stroke"
                android:fontFamily="@font/poppins_semibold"
                android:textAllCaps="false"
                android:textFontWeight="500"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/dog_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/weight"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/enter_weight"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/self_grey"
                android:textFontWeight="500"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/grams"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/food_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/weight"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/enter_grams"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/self_grey"
                android:textFontWeight="500"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/final_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Self_green"
            android:textFontWeight="500"
            android:textSize="20sp" />

        <Button
            android:id="@+id/calculate_foods_result"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/calculate"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>