<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/add_title"
            android:letterSpacing="0.0"
            android:textColor="@color/Self_green"
            android:textFontWeight="500"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date"
            android:letterSpacing="0.0"
            android:textAlignment="center"
            android:textColor="@color/self_grey"
            android:textFontWeight="500"
            android:textSize="14sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/detail"
                android:letterSpacing="0.0"
                android:textColor="@color/self_grey"
                android:textFontWeight="500"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/comment_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_comment"
                    android:layout_weight="1"
                    android:scaleType="center"/>

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/comment"
                    android:layout_weight="1"
                    android:letterSpacing="0.0"
                    android:textAlignment="center"
                    android:textColor="@color/self_grey"
                    android:textFontWeight="500"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 Comments"
                    android:layout_marginTop="16dp"/>



            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
