<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Self_pink"
    tools:context=".welcome_activity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/splash_image" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/detail"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/details"
        app:layout_constraintStart_toStartOf="@+id/details"
        app:layout_constraintTop_toBottomOf="@+id/details"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/signup_button"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>